# rational-rc

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  MANIFESt.in  README.md  carbonation.py  changelog.txt  chloride.py  corrosion and run corrosion.ipynb  corrosion.py  cracking.py  helper_func.py  membrane and chloride.ipynb  membrane and chloride_submit.ipynb  membrane and run membrane.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  run cracking.ipynb  run cracking_fully_vectorized.ipynb  run_carbonation_notebook.ipynb  run_chloride_notebook.ipynb  test_helper_func.py
.ipynb_checkpoints/: corrosion and run corrosion-checkpoint.ipynb  membrane and chloride_submit-checkpoint.ipynb  run_chloride_notebook-checkpoint.ipynb
docs/: requirements.txt
drafts/: ProjectWorkFlow copy.ipynb  ProjectWorkFlow.ipynb  corrosion and run corrosion.ipynb  cracking_draft.py  inspect.py  membrane and chloride_submit.ipynb  requirements.txt  run_chloride_add_cracking.ipynb  run_chloride_petrofka.ipynb  test_dependencies.py
modules/: carbonation.py  carbonation_example.ipynb  chloride.py  chloride_example.ipynb  corrosion.py  corrosion_example.ipynb  cracking.py  cracking_example.ipynb  draft.py  helper_func.py  math_helper.py  membrane and run membrane.ipynb  membrane.py  membrane_example.ipynb  test_carbonation.py  test_chloride.py  test_corrosion.py  test_cracking.py  test_helper_func.py  test_math_helper.py  test_membrane.py
notebooks/: carbonation_example.ipynb  chloride_example.ipynb  corrosion_example.ipynb  cracking_example.ipynb  membrane_example.ipynb
plots/: pf_membrane_and_chloride_plot_data.csv
(+51 files in other folders)
