[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rational-rc"
version = "0.0.3"
description = "This is a package: rational-rc"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Gang Li", email="ganglix@gmail.com" },
]

classifiers = [
    'Development Status :: 3 - Beta',
    "Programming Language :: Python :: 3.9",
    "License :: GNU GPLv3",
    "Operating System :: OS Independent",
]

dependencies = [  
"matplotlib==3.7.2",
"numpy==1.25.1",
"pandas==2.0.3",
"scipy==1.11.1",
]

[project.optional-dependencies]
test = [
]

doc = [
    "sphinx==6.2.1",
    "nbsphinx==0.9.2",
    "nbsphinx-link==1.3.0",
]


[project.urls]
"Homepage" = "https://github.com/ganglix/rational-rc"
"Documentation" = "https://rational-rc.readthedocs.io/en/latest/"